@startuml UML_base_classes
' run this to create a png file:
' plantuml -tpng "src/lbp_package/UML_base_classes.puml"

!define ABSTRACT_CLASS abstract class

' Base Classes - Core Interface Only
ABSTRACT_CLASS FeatureModel #90EE9055 {
    +__init__(exp_params)
    +load_data(exp_nr)
    +compute_features(exp_nr, visualize_flag)
}

ABSTRACT_CLASS PredictionModel #FFFFE055 {
    +__init__(params)
    +forward_pass(input)
    +train(dataset)
}

ABSTRACT_CLASS EvaluationModel #ADD8E655{
    +__init__(criteria)
    +add_feature_model(feature_model, name)
    +run_evaluation(exp_nr, visualize_flag)
}

' System Classes - Core Orchestration
ABSTRACT_CLASS Optimizer #FFB6C155 {
    +__init__(params)
    +find_optimum(prediction_model)
}

' System Classes - Core Orchestration
ABSTRACT_CLASS DataInterface #eeb6ff55 {
    +__init__(db_client)
    +pull_from_db(study)
    +push_to_db(study, data)
}

class LBPManager {
    +__init__(study)
    +evaluate(exp_nr)
    +predict(exp_nr)
    +calibrate(exp_nr)
}

' System Classes - Core Orchestration
class EvaluationSystem {
    +__init__(weights)
    +add_evaluation_model()
    +run_evaluation_system(exp_params, visualize_flag)
}

' System Classes - Core Orchestration
class PredictionSystem {
    +__init__()
    +add_ml_model()
    +run_inference(exp_params, visualize_flag)
}

' System Classes - Core Orchestration
class Calibration {
    +__init__(params)
    +add_optimizer()
}

' ' System Classes - Core Orchestration
' class Adaptation {
'     +...
' }

' class Augmentation {
'     +...
' }

' Relationships

LBPManager *-- DataInterface
LBPManager *-- EvaluationSystem
LBPManager *-- PredictionSystem
LBPManager *-- Calibration

EvaluationSystem o-- EvaluationModel
EvaluationModel o-- FeatureModel
PredictionSystem o-- PredictionModel
Calibration o-- Optimizer

@enduml